[package]
name = "ft-sync"
version = "0.1.0"
authors = ["Deepak Angrula <deepak@fifthtry.com>"]
edition = "2018"
description = ""

[workspace]
members = ["ft-api", "realm-client"]


[dependencies]
clap = "2.33.3"
thiserror = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = "1.0"
ftd = { version = "0.1.3", features = ["fifthtry"] }
ft-api = { path = "ft-api" }
chrono-tz = "0.5"
realm-client = { path = "realm-client" }

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dev-dependencies]
rusty-hook = "0.11.2"
fbt-lib = "0.1.8"
