[package]
name = "ft-cli"
version = "0.1.0"
authors = ["Deepak Angrula <deepak@fifthtry.com>"]
edition = "2018"
description = "ft-cli is a tool for syncing a git repo or a local folder to a FifthTry account"
license = "MIT"
repository = "https://github.com/fifthtry/ft-cli"
homepage = "https://www.fifthtry.com/amitu/realm/"

[workspace]
members = ["ft-api", "realm-client"]

[[bin]]
name = "ft"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
thiserror = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = "1.0"
ftd = { version = "0.1.7"}
ft-api = { path = "ft-api", version = "0.1.0" }
chrono-tz = "0.5"
realm-client = { path = "realm-client", version = "0.1.0" }
fifthtry-mdbook = { git = "https://github.com/fifthtry/mdBook", version = "0.4.8", branch = "fifthtry" }
html_parser = "0.6.2"
url = "2.2.2"
# mdbook = {path = "../mdBook"}

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dev-dependencies]
rusty-hook = "0.11.2"
fbt-lib = "0.1.10"
