[package]
name = "realm-client"
version = "0.1.0"
authors = ["Amit Upadhyay <upadhyay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = "1.0"
thiserror = "1"
serde_derive = "1.0"
url = "2.2.2"
sorted-json = "0.1.0"
anyhow = "1.0"

